# dlvr

./: .dockerignore  .gitignore  Dockerfile  README.md  app.vue  nuxt.config.ts  package-lock.json  package.json  pyproject.toml
api/: main.py
frontend/: app.vue  nuxt.config.ts  package-lock.json  package.json
plugins/: vuetify.ts
