[tool.poetry]
name = "dlvr"
version = "0.1.0"
description = ""
authors = ["Fritjof Büttner <mail@fritjofbuettner.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.1"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
